Fix spacewalk-list addons alignments (bsc#1041801)

--- a/branding/css/susemanager-theme.less
+++ b/branding/css/susemanager-theme.less
@@ -546,10 +546,19 @@ header, nav.navbar-pf {
   }
 }
 
+.spacewalk-list .spacewalk-list-top-addons .spacewalk-list-pagination {
+  float: right;
+  width: auto;
+  margin-bottom: 18px;
+}
+
 //PAGINATOR from 0 - 9 and A - Z
-.spacewalk-list-alphabar{
+.spacewalk-list .spacewalk-list-head-addons .spacewalk-list-alphabar,
+.spacewalk-list .spacewalk-list-top-addons .spacewalk-list-alphabar {
+  padding: 0;
   padding-bottom: .5em;
   float: left;
+  width: auto;
   margin-top: 5px;
   margin-left: 10px;
   .dropdown-menu {
